--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,25 +37,30 @@ dependencies:
   get_it: ^7.6.7
   fpdart: ^1.1.0
   get: ^4.7.2
-  hive: ^2.2.3
-  hive_flutter: ^1.1.0
-  path_provider: ^2.0.15
-  cached_network_image: ^3.2.3
   firebase_core: ^2.27.0
   firebase_auth: ^4.17.8
   cloud_firestore: ^4.9.1
+  path_provider: ^2.1.5
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   hive_generator: ^2.0.0
+  mockito: ^5.4.2
   build_runner: ^2.4.6
-  flutter_launcher_icons: ^0.13.1
+  flutter_launcher_icons: ^0.12.0
   flutter_lints: ^5.0.0
+
+dependency_overrides:
+  leak_tracker_flutter_testing: 3.0.8
+
 
 
 flutter_icons:
-  android: "launcher_icon"
+  android: true
   ios: true
   image_path: "assets/images/logo.png"
 
